# FallingMidiBarsMapping

./: pyproject.toml  run.py
falling_midi_trainer/: app.py  config.py
falling_midi_trainer/audio/: piano.py  sine.py
falling_midi_trainer/game/: state.py
falling_midi_trainer/midi/: files.py  parsing.py  ports.py
falling_midi_trainer/ui/: topbar.py
falling_midi_trainer/utils/: math_utils.py
